style: fix InvoiceForm border-radius on mobile devices

--- a/src/components/InvoiceForm/InvoiceForm.module.scss
+++ b/src/components/InvoiceForm/InvoiceForm.module.scss
@@ -187,6 +187,7 @@
 
   .form {
     gap: 1.5rem;
+    border-radius: 0;
     padding-inline: 1.5rem;
     padding-block: 2rem 8rem;
   }
